# gym-management.api

./: .aerichignore  .env.example  AERICH_COMMANDS.sh  Dockerfile  Procfile  README.md  aerich.ini  alembic.ini  bcrypt_fix.py  debug_statistics.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  test_api_endpoints.py  test_backend.py  test_cors.py  test_direct_endpoints.py  test_membership_system.py  test_memberships_endpoint.py  test_new_routes.py  test_routes.py
alembic/: env.py
alembic/versions/: 001_initial_tables.py  2026_02_09_add_price_paid_column.py  2026_02_09_enhance_membership_system.py  3b08211379d7_initial_migration_with_all_tables_safe.py  654198689ca5_add_facial_recognition_endpoints_and_.py  6981eb6da347_add_fields_to_membership_and_user_models.py  7b085aea43c3_add_updated_at_column_to_users_table.py  9b95a5f6c046_add_security_middleware_and_rate_.py  a49ef42046dc_separate_user_and_client_models_with_.py  b5c2d8e4f1a2_separate_user_and_client_models_corrected.py  bade1f9226ee_merge_duplicate_migrations.py  ce3a9b8f0d6f_add_hashed_password_to_clients.py  f00000000001_merge_hashed_password_migration_with_main_branch.py  f00000000002_ensure_hashed_password_column_exists_in_clients_table.py  f07040f8de07_implement_jwt_authentication_and_.py
app/: bcrypt_fix.py  config.py  database.py  init_db.py  main.py
app/api/: analytics.py  attendance.py  audit_logs.py  auth.py  clients.py  facial_recognition.py  gym_class.py  kaizen.py  member.py  membership_types.py  memberships.py  payments.py  (+1 more)
migrations/: 001_initial_schema_20260209_212540.py
(+57 files in other folders)
