[tool.poetry]
name = "gym-management-api"
version = "1.0.0"
description = "API for gym management system with facial recognition"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlalchemy = "2.0.23"
pymysql = "1.1.0"
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
mediapipe = "0.10.7"
opencv-python-headless = "4.8.1.78"
numpy = "1.26.2"
pydantic = {extras = ["email"], version = "1.10.13"}
scikit-learn = "1.3.2"
alembic = "1.13.1"
slowapi = "0.1.9"
pydantic-settings = "2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = false