[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-management-api"
version = "1.0.0"
description = "Gym Management System API with Tortoise ORM"

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
